Added in more styling for tabs on tours page

--- a/_factory_tabs.html
+++ b/_factory_tabs.html
@@ -33,34 +33,50 @@
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Itinerary
+                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false"><span class="pd-tabs-1-tri"></span>Itinerary
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Price
+                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false"><span class="pd-tabs-1-tri"></span>Price
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Includes
+                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false"><span class="pd-tabs-1-tri"></span>Includes
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Faq
+                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false"><span class="pd-tabs-1-tri"></span>Faq
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-extensions-tab" data-bs-toggle="pill" data-bs-target="#pills-extensions" type="button" role="tab" aria-controls="pills-extensions" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Extensions
+                                    <button class="nav-link" id="pills-extensions-tab" data-bs-toggle="pill" data-bs-target="#pills-extensions" type="button" role="tab" aria-controls="pills-extensions" aria-selected="false"><span class="pd-tabs-1-tri"></span>Extensions
                                     </button>
                                 </li>
                             </ul>
                         </div>
                         <div class="tab-content" id="pills-tabContent">
-                            <div class="tab-pane fade show active" id="pills-overview" role="tabpanel" aria-labelledby="pills-home-tab">Overview Tab content</div>
+                            <div class="tab-pane fade show active" id="pills-overview" role="tabpanel" aria-labelledby="pills-home-tab">
+                                <div class="pd-tabs-1-style">
+                                    <h3>Overview</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et molestie urna. Etiam at eros leo. Mauris tincidunt <b>mattis elementum</b>. Donec mattis lacinia massa, eget hendrerit velit porttitor sit amet. Morbi fringilla fringilla odio, sed dapibus augue condimentum cursus. Cras eget orci tortor. <b>Curabitur neque metus</b>, tempus sed commodo quis, rutrum sed ipsum. Nullam posuere lacus eget semper feugiat. Donec pharetra ac felis id convallis. Vivamus interdum accumsan libero, sit amet posuere turpis elementum et. <b>Sed rutrum</b> et velit consequat facilisis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed aliquet massa lacus, eu imperdiet massa accumsan nec.</p>
+                                    <p>&nbsp;</p>
+                                    <p></p>
+                                    <p></p>
+                                    <h4>Itinerary Overview</h4>
+                                    <p>Day 1: Arrival in Munich, Salzburg<br>Day 2: The picturesque Salzkammergut lake district<br>Day 3: The top of Austria and into Italy<br>Day 4: The heart of the Dolomites<br>Day 5: Most beautiful valley<br>Day 6: Land of castles, wine and orchards</p>
+                                    <p></p>
+                                    <p></p>
+                                    <p>&nbsp;</p>
+                                    <p></p>
+                                    <h4>Amenity Overview</h4>
+                                    <h4></h4>
+                                    <h5>Hotels:</h5>
+                                    <p>- 2 nights in a village in the Pongau region of Austria<br>- 2 nights in Cortina<br>- 2 nights in Merano<br>- 2 nights in Bad Ragaz area of Switzerland</p>
+                                    <p>&nbsp;</p>
+                                    <h5>Included Meals:</h5>
+                                    <p>- 8 buffet breakfasts<br>- 4 evening meals<br>- 1 winery lunch</p>
+                                </div>                                 
+                            </div>
                             <div class="fade tab-pane" id="pills-itinerary" role="tabpanel" aria-labelledby="pills-profile-tab">
                                 <div class="pd-tabs-1-panels-timeline">
                                     <div class="pd-tabs-1-timeline-outer">
@@ -68,7 +84,8 @@
                                     </div>
                                     <div class="pd-tabs-1-panels-outer">
                                         <article class="pd-tabs-1-panels-card">
-                                            <header><a href="#panel-1" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="panel-1"><h3>Day 1: Arrival in Munich</h3></a>
+                                            <header>
+                                                <a href="#panel-1" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="panel-1"><h3>Day 1: Arrival in Munich</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-1" aria-expanded="true" aria-controls="panel-1">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -103,7 +120,8 @@
                                             </div>
                                         </article>
                                         <article class="pd-tabs-1-panels-card">
-                                            <header><a href="#panel-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-2"><h3>Day 2: The picturesque Salzkammergut lake district</h3></a>
+                                            <header>
+                                                <a href="#panel-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-2"><h3>Day 2: The picturesque Salzkammergut lake district</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-2" aria-expanded="true" aria-controls="panel-2">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -174,7 +192,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade" id="pills-price" role="tabpanel" aria-labelledby="pills-contact-tab">Price tab content</div>
+                            <div class="tab-pane fade" id="pills-price" role="tabpanel" aria-labelledby="pills-contact-tab">
+                                <div class="pd-tabs-1-style">
+                                    <h3>Alpine Dream Pricing 2025</h3>
+                                    <p><b>Adult: 18 &amp; over - EUR 2.800,-<br>Single Supplement: EUR 600,-</b></p>
+                                    <p>Teen and child pricing available upon request.</p>
+                                    <p>20% of tour price to be paid at booking.</p>
+                                    <p>Balance is due 4 weeks prior to start of tour.</p>
+                                    <p>Please see our terms and conditions page for details.</p>
+                                    <p></p>
+                                </div>                                 
+                            </div>
                             <div class="tab-pane fade" id="pills-includes" role="tabpanel" aria-labelledby="pills-contact-tab">Includes tab content</div>
                             <div class="tab-pane fade" id="pills-faq" role="tabpanel" aria-labelledby="pills-contact-tab">FAQ tab content</div>
                             <div class="tab-pane fade" id="pills-extensions" role="tabpanel" aria-labelledby="pills-contact-tab">Extensions tab content</div>
