Added in list styling

--- a/_factory_tabs.html
+++ b/_factory_tabs.html
@@ -33,28 +33,23 @@
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Itinerary
+                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false"><span class="pd-tabs-1-tri"></span>Itinerary
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Price
+                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false"><span class="pd-tabs-1-tri"></span>Price
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Includes
+                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false"><span class="pd-tabs-1-tri"></span>Includes
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Faq
+                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false"><span class="pd-tabs-1-tri"></span>Faq
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-extensions-tab" data-bs-toggle="pill" data-bs-target="#pills-extensions" type="button" role="tab" aria-controls="pills-extensions" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Extensions
+                                    <button class="nav-link" id="pills-extensions-tab" data-bs-toggle="pill" data-bs-target="#pills-extensions" type="button" role="tab" aria-controls="pills-extensions" aria-selected="false"><span class="pd-tabs-1-tri"></span>Extensions
                                     </button>
                                 </li>
                             </ul>
@@ -68,7 +63,7 @@
                                     <p></p>
                                     <p></p>
                                     <h4>Itinerary Overview</h4>
-                                    <p>Day 1: Arrival in Munich, Salzburg<br>Day 2: The picturesque Salzkammergut lake district<br>Day 3: The top of Austria and into Italy<br>Day 4: The heart of the Dolomites<br>Day 5: Most beautiful valley<br>Day 6: Land of castles, wine and orchards</p>
+                                    <p><strong>Day 1: Arrival in Munich, Salzburg<br>Day 2: The picturesque Salzkammergut lake district<br>Day 3: The top of Austria and into Italy<br>Day 4: The heart of the Dolomites<br>Day 5: Most beautiful valley<br>Day 6: Land of castles, wine and orchards</strong></p>
                                     <p></p>
                                     <p></p>
                                     <p>&nbsp;</p>
@@ -76,10 +71,10 @@
                                     <h4>Amenity Overview</h4>
                                     <h4></h4>
                                     <h5>Hotels:</h5>
-                                    <p>- 2 nights in a village in the Pongau region of Austria<br>- 2 nights in Cortina<br>- 2 nights in Merano<br>- 2 nights in Bad Ragaz area of Switzerland</p>
+                                    <p><strong>- 2 nights in a village in the Pongau region of Austria<br>- 2 nights in Cortina<br>- 2 nights in Merano<br>- 2 nights in Bad Ragaz area of Switzerland</strong></p>
                                     <p>&nbsp;</p>
                                     <h5>Included Meals:</h5>
-                                    <p>- 8 buffet breakfasts<br>- 4 evening meals<br>- 1 winery lunch</p>
+                                    <p><strong>- 8 buffet breakfasts<br>- 4 evening meals<br>- 1 winery lunch</strong></p>
                                 </div>                                 
                             </div>
                             <div class="fade tab-pane" id="pills-itinerary" role="tabpanel" aria-labelledby="pills-profile-tab">
@@ -89,7 +84,8 @@
                                     </div>
                                     <div class="pd-tabs-1-panels-outer">
                                         <article class="pd-tabs-1-panels-card">
-                                            <header><a href="#panel-1" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="panel-1" class="timelineBtn"><h3>Day 1: Arrival in Munich</h3></a>
+                                            <header>
+                                                <a href="#panel-1" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="panel-1" class="timelineBtn"><h3>Day 1: Arrival in Munich</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-1" aria-expanded="true" aria-controls="panel-1" class="timelineBtn">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -124,7 +120,8 @@
                                             </div>
                                         </article>
                                         <article class="pd-tabs-1-panels-card">
-                                            <header><a href="#panel-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-2" class="timelineBtn"><h3>Day 2: The picturesque Salzkammergut lake district</h3></a>
+                                            <header>
+                                                <a href="#panel-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-2" class="timelineBtn"><h3>Day 2: The picturesque Salzkammergut lake district</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-2" aria-expanded="true" aria-controls="panel-2" class="timelineBtn">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -158,7 +155,8 @@
                                             </div>
                                         </article>
                                         <article class="pd-tabs-1-panels-card">
-                                            <header><a href="#panel-3" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-3" class="timelineBtn"><h3>Day 3:&nbsp;Cras tincidunt dolor vitae quam suscipit</h3></a>
+                                            <header>
+                                                <a href="#panel-3" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-3" class="timelineBtn"><h3>Day 3:&nbsp;Cras tincidunt dolor vitae quam suscipit</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-3" aria-expanded="true" aria-controls="panel-3" class="timelineBtn">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -206,7 +204,24 @@
                                     <p></p>
                                 </div>                                 
                             </div>
-                            <div class="tab-pane fade" id="pills-includes" role="tabpanel" aria-labelledby="pills-contact-tab">Includes tab content</div>
+                            <div class="tab-pane fade" id="pills-includes" role="tabpanel" aria-labelledby="pills-contact-tab">
+                                <div class="pd-tabs-1-style">
+                                    <h3>Bang for your Buck</h3>
+                                    <ul>
+                                        <li>Door-to-door transportation in a premium coach</li>
+                                        <li>Professional and experienced tour director</li>
+                                        <li>Friendly and knowledgeable guide</li>
+                                    </ul>
+                                    <p>&nbsp;</p>
+                                    <br>
+                                    <h3>These things are extra</h3>
+                                    <ul class="pd-tabs-1-list-negative">
+                                        <li>Door-to-door transportation in a premium coach</li>
+                                        <li>Professional and experienced tour director</li>
+                                        <li>Friendly and knowledgeable guide</li>
+                                    </ul>
+                                </div>                                 
+                            </div>
                             <div class="tab-pane fade" id="pills-faq" role="tabpanel" aria-labelledby="pills-contact-tab">FAQ tab content</div>
                             <div class="tab-pane fade" id="pills-extensions" role="tabpanel" aria-labelledby="pills-contact-tab">Extensions tab content</div>
                         </div>
