Added in accordion to tabs

--- a/_factory_tabs.html
+++ b/_factory_tabs.html
@@ -222,47 +222,45 @@
                                 </div>                                 
                             </div>
                             <div class="tab-pane fade" id="pills-faq" role="tabpanel" aria-labelledby="pills-contact-tab">
-                                <div>
-                                    <div class="accordion" id="faqs-accordion" data-pg-collapsed>
+                                <div class="pd-tabs-1-accordion">
+                                    <div class="accordion" id="faqs-accordion">
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" id="heading-1"> <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-1" aria-expanded="true" aria-controls="collapse-1">
                                                     Is the trip guaranteed to operate?
 </button> </h2>
                                             <div id="collapse-1" class="accordion-collapse collapse show" aria-labelledby="heading-1" data-bs-parent="#faqs-accordion">
-                                                <div class="accordion-body">
-                                                    <strong>In semper volutpat erat et dapibus.</strong> Vestibulum sit amet lectus non purus volutpat venenatis vel et turpis. Pellentesque neque ipsum, laoreet ac enim at, sollicitudin euismod mauris. In condimentum sodales ante, ac accumsan enim dapibus sed. Proin in purus condimentum, volutpat massa eget, egestas turpis. Integer vitae elit ut arcu pretium tristique aliquam ut nunc. 
+                                                <div class="accordion-body"><strong><p>In semper volutpat erat et dapibus.</strong> Vestibulum sit amet lectus non purus volutpat venenatis vel et turpis. Pellentesque neque ipsum, laoreet ac enim at, sollicitudin euismod mauris. In condimentum sodales ante, ac accumsan enim dapibus sed. Proin in purus condimentum, volutpat massa eget, egestas turpis. Integer vitae elit ut arcu pretium tristique aliquam ut nunc. 
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="heading-2"> <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-2" aria-expanded="false" aria-controls="collapse-2">
-                                                    What is your cancellation policy?
+                                            <div class="accordion-item">
+                                                <h2 class="accordion-header" id="heading-2"> <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-2" aria-expanded="false" aria-controls="collapse-2">
+                                                        What is your cancellation policy?
 </button> </h2>
-                                            <div id="collapse-2" class="accordion-collapse collapse" aria-labelledby="heading-2" data-bs-parent="#faqs-accordion">
-                                                <div class="accordion-body">
-                                                    <strong>Lorem ipsum dolor sit amet, </strong>consectetur adipiscing elit. Suspendisse vel pellentesque lorem. Mauris eu faucibus diam, quis vehicula lectus. Vivamus eu vehicula metus, eget cursus lectus. Sed in arcu ut lacus cursus pretium. Donec massa enim, volutpat id nulla in, dapibus aliquet ipsum. Donec eu tellus sem. Aliquam iaculis consequat ipsum ac aliquet. Quisque porta in dui a rhoncus. Etiam quis erat ipsum. Cras at fringilla ipsum. Ut ac iaculis turpis. Cras eu facilisis est.    
+                                                <div id="collapse-2" class="accordion-collapse collapse" aria-labelledby="heading-2" data-bs-parent="#faqs-accordion">
+                                                    <div class="accordion-body">
+                                                        <p><strong>Lorem ipsum dolor sit amet, </strong>consectetur adipiscing elit. Suspendisse vel pellentesque lorem. Mauris eu faucibus diam, quis vehicula lectus. Vivamus eu vehicula metus, eget cursus lectus. Sed in arcu ut lacus cursus pretium. Donec massa enim, volutpat id nulla in, dapibus aliquet ipsum. Donec eu tellus sem. Aliquam iaculis consequat ipsum ac aliquet. Quisque porta in dui a rhoncus. Etiam quis erat ipsum. Cras at fringilla ipsum. Ut ac iaculis turpis. Cras eu facilisis est. </p> 
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="heading-3"> <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-3" aria-expanded="false" aria-controls="collapse-3">
-                                                    Could weather affect this tour?
+                                            <div class="accordion-item">
+                                                <h2 class="accordion-header" id="heading-3"> <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-3" aria-expanded="false" aria-controls="collapse-3">
+                                                        Could weather affect this tour?
 </button> </h2>
-                                            <div id="collapse-3" class="accordion-collapse collapse" aria-labelledby="heading-3" data-bs-parent="#faqs-accordion">
-                                                <div class="accordion-body">
-                                                    <strong>Sed eget ultrices mauris.</strong> Sed sed dui sapien. Maecenas ac eros feugiat, aliquam elit eget, dapibus mi. Nulla porta interdum odio ac molestie. Nam tempus, lorem facilisis laoreet consectetur, magna orci pulvinar velit, sed commodo dui eros non odio. Aliquam vehicula lorem non auctor lacinia.
+                                                <div id="collapse-3" class="accordion-collapse collapse" aria-labelledby="heading-3" data-bs-parent="#faqs-accordion">
+                                                    <div class="accordion-body">
+                                                        <p><strong>Sed eget ultrices mauris.</strong> Sed sed dui sapien. Maecenas ac eros feugiat, aliquam elit eget, dapibus mi. Nulla porta interdum odio ac molestie. Nam tempus, lorem facilisis laoreet consectetur, magna orci pulvinar velit, sed commodo dui eros non odio. Aliquam vehicula lorem non auctor lacinia.</p>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                                <div class="tab-pane fade" id="pills-extensions" role="tabpanel" aria-labelledby="pills-contact-tab"></div>
                             </div>
-                            <div class="tab-pane fade" id="pills-extensions" role="tabpanel" aria-labelledby="pills-contact-tab">Extensions tab content</div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <script>
+                <script>
                 let timelineOuter;
                 let panelChildren;
                 let firstPanelChild;
