--- a/_factory_tabs.html
+++ b/_factory_tabs.html
@@ -55,7 +55,7 @@
                             </ul>
                         </div>
                         <div class="tab-content" id="pills-tabContent">
-                            <div class="tab-pane fade show active" id="pills-overview" role="tabpanel" aria-labelledby="pills-home-tab">
+                            <div class="tab-pane fade show active" id="pills-overview" role="tabpanel" aria-labelledby="pills-overview-tab" data-pg-collapsed>
                                 <div class="pd-tabs-1-style">
                                     <h3>Overview</h3>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et molestie urna. Etiam at eros leo. Mauris tincidunt <b>mattis elementum</b>. Donec mattis lacinia massa, eget hendrerit velit porttitor sit amet. Morbi fringilla fringilla odio, sed dapibus augue condimentum cursus. Cras eget orci tortor. <b>Curabitur neque metus</b>, tempus sed commodo quis, rutrum sed ipsum. Nullam posuere lacus eget semper feugiat. Donec pharetra ac felis id convallis. Vivamus interdum accumsan libero, sit amet posuere turpis elementum et. <b>Sed rutrum</b> et velit consequat facilisis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed aliquet massa lacus, eu imperdiet massa accumsan nec.</p>
@@ -77,7 +77,7 @@
                                     <p><strong>- 8 buffet breakfasts<br>- 4 evening meals<br>- 1 winery lunch</strong></p>
                                 </div>                                 
                             </div>
-                            <div class="fade tab-pane" id="pills-itinerary" role="tabpanel" aria-labelledby="pills-profile-tab">
+                            <div class="fade tab-pane" id="pills-itinerary" role="tabpanel" aria-labelledby="pills-itinerary-tab" data-pg-collapsed>
                                 <div class="pd-tabs-1-panels-timeline">
                                     <div class="pd-tabs-1-timeline-outer">
                                         <div class="pd-tabs-1-timeline"></div>
@@ -193,7 +193,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade" id="pills-price" role="tabpanel" aria-labelledby="pills-contact-tab">
+                            <div class="tab-pane fade" id="pills-price" role="tabpanel" aria-labelledby="pills-price-tab" data-pg-collapsed>
                                 <div class="pd-tabs-1-style">
                                     <h3>Alpine Dream Pricing 2025</h3>
                                     <p><b>Adult: 18 &amp; over - EUR 2.800,-<br>Single Supplement: EUR 600,-</b></p>
@@ -204,7 +204,7 @@
                                     <p></p>
                                 </div>                                 
                             </div>
-                            <div class="tab-pane fade" id="pills-includes" role="tabpanel" aria-labelledby="pills-contact-tab">
+                            <div class="tab-pane fade" id="pills-includes" role="tabpanel" aria-labelledby="pills-includes-tab" data-pg-collapsed>
                                 <div class="pd-tabs-1-style">
                                     <h3>Bang for your Buck</h3>
                                     <ul>
@@ -221,7 +221,7 @@
                                     </ul>
                                 </div>                                 
                             </div>
-                            <div class="tab-pane fade" id="pills-faq" role="tabpanel" aria-labelledby="pills-contact-tab">
+                            <div class="tab-pane fade" id="pills-faq" role="tabpanel" aria-labelledby="pills-faq-tab" data-pg-collapsed>
                                 <div class="pd-tabs-1-accordion">
                                     <div class="accordion" id="faqs-accordion">
                                         <div class="accordion-item">
@@ -256,6 +256,11 @@
                                     </div>
                                 </div>
                                 <div class="tab-pane fade" id="pills-extensions" role="tabpanel" aria-labelledby="pills-contact-tab"></div>
+                            </div>
+                            <div class="tab-pane fade" id="pills-extensions" role="tabpanel" aria-labelledby="pills-extensions-tab">
+                                <div>
+                                    <p>Extensions Tab</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -305,6 +310,7 @@
                     
                 }
             </script>
+            </div>
         </section>
         <script src="/assets/js/popper.min.js"></script>
         <script src="/bootstrap/js/bootstrap.min.js"></script>
